# arcflash

./: .env.example  .gitignore  README.md  THIRD_PARTY.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
backend/arcflash_api/: __init__.py  __main__.py  arcflash_h_worker.py  calculations.py  errors.py  gradium.py  hcomputer.py  main.py  nemoclaw.py  prompts.py  settings.py
backend/tests/: test_api.py  test_bootstrap_nemoclaw.py  test_calculations.py  test_electrisim_api.py  test_gradium.py  test_h_worker.py  test_hcomputer.py  test_nemoclaw.py  test_sdk_surface.py
deploy/digitalocean/: Caddyfile  README.md  arcflash.env.example  arcflash.service  bootstrap-host.sh  caddy-arcflash.conf  verify-host.sh
engine/: generate_cv104_study.py  requirements.txt
infrastructure/nemoclaw/: hcomputer-eu.yaml  hcomputer-us.yaml
scripts/: bootstrap_nemoclaw.py  qa-electrisim.mjs  qa-flow.mjs
server/: index.ts
src/: App.tsx  data.ts  styles.css  types.ts
src/components/: ApprovalDialog.tsx  AuditDrawer.tsx  EditEvidenceDialog.tsx  ElectrisimLab.tsx  EvidenceRail.tsx  EvidenceThumbnail.tsx  NetworkDiagram.tsx  OperatorWorkbench.tsx  ReportPreview.tsx  StudyWorkbench.tsx
src/lib/: electrisim.test.ts  electrisim.ts  hcomputer.test.ts  hcomputer.ts  report.ts  safety.test.ts  safety.ts
